# swiftfizz

./: .travis.yml  CHANGELOG.md  Dockerfile  Import.hs  LICENSE  README.md  stack.yaml  swiftfizz-benchmark.html  swiftfizz-exe.hp  swiftfizz-exe.prof  swiftfizz.cabal
src/: FizzBuzz.hs  FizzFib.hs  FizzInput.hs  FizzTypes.hs  FizzWrapper.hs  Input.hs
src-benchmark/: Main.hs
src-exe/: Main.hs
src-test/: Main.hs
src-test/PropTests/: Fibonacci.hs  FizzBuzz.hs  PropImports.hs
src-test/UnitTests/: Fibonacci.hs  Input.hs  UnitImports.hs
