name:                swiftfizz
version:             0.1.0.0
synopsis:            FizzBuzz as specifed by https://gist.github.com/mookerji/ef85e76e8bbfb6539643
description:         Please see README.md

license:             ISC
license-file:        LICENSE
author:              Michael Litchard
maintainer:          michael@schmong.org
copyright:           © 2016 Michael Litchard
homepage:            http://github.com/mlitchard/swiftfizz
bug-reports:         http://github.com/mlitchard/swiftfizz/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/mlitchard/swiftfizz

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    . , src, src-exe
  exposed-modules:   Import
  extensions:        NoImplicitPrelude
  other-modules:     FizzTypes
                   , Input
                   , FizzBuzz
  build-depends:     base >= 4.8 && < 5
                   , primes         
                   , semigroups     
                   , MissingH       
                   , basic-prelude  
                   , text           

executable swiftfizz-exe
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  extensions:        NoImplicitPrelude
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude
                   , swiftfizz

test-suite swiftfizz-test
  type:              exitcode-stdio-1.0
  extensions:        NoImplicitPrelude
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , swiftfizz
                   , QuickCheck   
                   , hspec         
                   , primes        
                   , basic-prelude 
                   , MissingH      

benchmark swiftfizz-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion
                   , swiftfizz
