name:                swiftfizz
version:             0.1.0.0
synopsis:            FizzBuzz as specifed by https://gist.github.com/mookerji/ef85e76e8bbfb6539643
description:         Please see README.md

license:             ISC
license-file:        LICENSE
author:              Michael Litchard
maintainer:          michael@schmong.org
copyright:           © 2016 Michael Litchard
homepage:            http://github.com/mlitchard/swiftfizz
bug-reports:         http://github.com/mlitchard/swiftfizz/issues
category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.22

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/mlitchard/swiftfizz

library
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     . , src 

  default-extensions: NoImplicitPrelude
  other-extensions:   MonadComprehensions
                    , OverloadedStrings
  
  exposed-modules: FizzWrapper 
  other-modules:   FizzTypes
                 , FizzInput
                 , FizzBuzz
                 , FizzFib

  build-depends:     base >= 4.8 && < 5
                   , primes         
                   , semigroups     
                   , MissingH       
                   , basic-prelude  
                   , text
                   , deepseq
                   , parallel           

executable swiftfizz-exe
  default-language: Haskell2010
  ghc-options: -eventlog -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude
                   , text
                   , swiftfizz

test-suite swiftfizz-test
  type:               exitcode-stdio-1.0
  default-extensions:  NoImplicitPrelude
  other-extensions:    OverloadedStrings

  default-language:   Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src
                   , src-test

  main-is:           Main.hs
  other-modules:     FizzBuzz
                   , FizzTypes
                   , FizzFib
                   , FizzInput
                   , PropTests.PropImports
                   , PropTests.Fibonacci
                   , PropTests.FizzBuzz
                   , UnitTests.UnitImports
                   , UnitTests.Fibonacci
                   , UnitTests.Input

  build-depends:     base >= 4.8 && < 5
                   , swiftfizz
                   , QuickCheck   
                   , hspec
                   , semigroups
                   , text         
                   , primes        
                   , basic-prelude 
                   , MissingH
                   , parallel      

benchmark swiftfizz-benchmark
  type:              exitcode-stdio-1.0
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -rtsopts
  hs-source-dirs: src, src-benchmark
  main-is:           Main.hs
  other-modules:     FizzBuzz  
                   , FizzFib
  build-depends:     base >= 4.8 && < 5
                   , criterion
                   , primes
                   , semigroups
                   , MissingH
                   , basic-prelude
                   , text
                   , swiftfizz
                   , parallel
